[gd_scene load_steps=6 format=2]

[ext_resource path="res://Cars/araba3.gd" type="Script" id=1]
[ext_resource path="res://Player/city_cars_2.png" type="Texture" id=2]
[ext_resource path="res://Cars/patianceMeter.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.31828
height = 35.9975

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.7777
height = 65.2606

[node name="Araba3" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="city_cars_2" type="Sprite" parent="."]
position = Vector2( -0.5, -7.35961 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2, 84, 48, 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.198471, 0.0865631 )
rotation = 1.5708
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.996506, -6.84091 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -56.0
margin_top = -61.0
margin_right = 56.0
margin_bottom = -40.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
margin_right = 79.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="PatianceMeter" parent="." instance=ExtResource( 3 )]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
